--- a/automatic.conf.templ
+++ b/automatic.conf.templ
@@ -8,4 +8,4 @@
   build_python=no
   install_sim=yes
   build_MQOnly=no
-  SIMPATH_INSTALL=/opt/cbm_externals/$CBMEXTERNALS_VERSION
+  SIMPATH_INSTALL=
